--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ config.log
 config.status
 linnwnx2/*/Makefile
 linnwnx2/configure
+mod/naturaldocs-project/Data/
+mod/naturaldocs-project/Menu_Backup*
