events/Makefile: dont do install on all

--- a/mod/nss/events/Makefile
+++ b/mod/nss/events/Makefile
@@ -1,6 +1,6 @@
 # inherits stuff
 
-all: clean preprocess-sternenfall preprocess compile inst
+all: preprocess-sternenfall preprocess compile 
 
 inst:
 	cp -v *.ncs ~/nwserver/res/
