Gabel-Kanalisation-Sued: Durchgang zu Gabel-Gruften-Unterbau

--- a/mod/area/gabkans.gic.yml
+++ b/mod/area/gabkans.gic.yml
@@ -13,6 +13,7 @@ hash: !ruby/object:NWN::Gff::Struct
       type: :list
       value: 
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: Metal Door}}, struct_id: 8}
     Encounter List: !ruby/object:NWN::Gff::Element 
       label: Encounter List
       type: :list
