--- a/mod/area/gabkans.git.yml
+++ b/mod/area/gabkans.git.yml
@@ -96,6 +96,75 @@ hash: !ruby/object:NWN::Gff::Struct
           Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 85.0}
           Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0}
         struct_id: 8
+      - !ruby/object:NWN::Gff::Struct
+        hash:
+          AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
+          Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
+          AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.57079589366913}
+          CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 32}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
+          CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 60}
+          Description: !ruby/object:NWN::Gff::Element
+            label: Description
+            str_ref: 9070
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages: {}
+
+          DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 28}
+          Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
+          Fort: !ruby/object:NWN::Gff::Element {label: Fort, type: :byte, value: 28}
+          GenericType: !ruby/object:NWN::Gff::Element {label: GenericType, type: :byte, value: 5}
+          HP: !ruby/object:NWN::Gff::Element {label: HP, type: :short, value: 60}
+          Hardness: !ruby/object:NWN::Gff::Element {label: Hardness, type: :byte, value: 10}
+          Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
+          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: key_gruften_b}
+          KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: gabel_gruften_b_2_gabel_kans}
+          LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
+          LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
+          LocName: !ruby/object:NWN::Gff::Element
+            label: LocName
+            str_ref: 5349
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages:
+                4: Door
+          Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 1}
+          Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 1}
+          OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
+          OnClosed: !ruby/object:NWN::Gff::Element {label: OnClosed, type: :resref, value: ""}
+          OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: ""}
+          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: x2_door_death}
+          OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
+          OnFailToOpen: !ruby/object:NWN::Gff::Element {label: OnFailToOpen, type: :resref, value: ""}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
+          OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: ""}
+          OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
+          OnOpen: !ruby/object:NWN::Gff::Element {label: OnOpen, type: :resref, value: ""}
+          OnSpellCastAt: !ruby/object:NWN::Gff::Element {label: OnSpellCastAt, type: :resref, value: ""}
+          OnTrapTriggered: !ruby/object:NWN::Gff::Element {label: OnTrapTriggered, type: :resref, value: ""}
+          OnUnlock: !ruby/object:NWN::Gff::Element {label: OnUnlock, type: :resref, value: ""}
+          OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: ""}
+          OpenLockDC: !ruby/object:NWN::Gff::Element {label: OpenLockDC, type: :byte, value: 32}
+          Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
+          PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
+          Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_kans_2_gabel_gruften_b}
+          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_door_metal}
+          TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
+          TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
+          TrapDisarmable: !ruby/object:NWN::Gff::Element {label: TrapDisarmable, type: :byte, value: 1}
+          TrapFlag: !ruby/object:NWN::Gff::Element {label: TrapFlag, type: :byte, value: 0}
+          TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
+          TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 2}
+          Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 24.1000003814697}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 95.0}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 1.0}
+        struct_id: 8
     Encounter List: !ruby/object:NWN::Gff::Element 
       label: Encounter List
       type: :list
