--- a/mod/area/gabel_gruften_b.gic.yml
+++ b/mod/area/gabel_gruften_b.gic.yml
@@ -14,6 +14,7 @@ hash: !ruby/object:NWN::Gff::Struct
       value: 
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: Metal Door}}, struct_id: 8}
     Encounter List: !ruby/object:NWN::Gff::Element 
       label: Encounter List
       type: :list
